@@ -1,0 +1,197 @@
+#!/vol2/TCL_TK/glinux/bin/expect
+#___INFO__MARK_BEGIN__
+##########################################################################
+#
+#  The Contents of this file are made available subject to the terms of
+#  the Sun Industry Standards Source License Version 1.2
+#
+#  Sun Microsystems Inc., March, 2001
+#
+#
+#  Sun Industry Standards Source License Version 1.2
+#  =================================================
+#  The contents of this file are subject to the Sun Industry Standards
+#  Source License Version 1.2 (the "License"); You may not use this file
+#  except in compliance with the License. You may obtain a copy of the
+#  License at http://gridengine.sunsource.net/Gridengine_SISSL_license.html
+#
+#  Software provided under this License is provided on an "AS IS" basis,
+#  WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESSED OR IMPLIED, INCLUDING,
+#  WITHOUT LIMITATION, WARRANTIES THAT THE SOFTWARE IS FREE OF DEFECTS,
+#  MERCHANTABLE, FIT FOR A PARTICULAR PURPOSE, OR NON-INFRINGING.
+#  See the License for the specific provisions governing your rights and
+#  obligations concerning the Software.
+#
+#  The Initial Developer of the Original Code is: Sun Microsystems, Inc.
+#
+#  Copyright: 2001 by Sun Microsystems, Inc.
+#
+#  All Rights Reserved.
+#
+##########################################################################
+#___INFO__MARK_END__
+
+
+# define global variable in this namespace
+global check_name 
+global check_category 
+global check_description 
+global check_needs
+global check_functions 
+global check_errno 
+global check_errstr 
+global check_highest_level
+global check_init_level_procedure
+global check_root_access_needs
+global env
+
+#set check_root_access_needs "yes"
+
+# define a level initialization procedure:
+set check_init_level_procedure "host_aliases_test_init_level"
+
+# define test's name and run level descriptions
+set check_name            "host_aliases_test"
+set check_category        "COMPATIBILITY SYSTEM VERIFIED"
+set check_highest_level   0
+set check_description(0)  "test host aliases file"
+
+# define test's dependencies
+set check_needs           "init_core_system" 
+
+# setup and cleanup functions
+set check_setup_function host_aliases_test_setup
+set check_cleanup_function host_aliases_test_cleanup
+
+
+
+# define test's procedure order
+set check_functions ""
+lappend check_functions "host_aliases_test_test1"
+
+
+global have_host_aliases
+set have_host_aliases "false"
+
+proc host_aliases_test_init_level {} {
+   global CHECK_ACT_LEVEL
+
+   switch -- $CHECK_ACT_LEVEL {
+      "0" { 
+         return 0
+      } 
+   } 
+
+   return -1  ;# no other level 
+}
+
+
+
+# -------- local test procedures: initialization------------------------------
+
+
+proc host_aliases_test_setup  {} {
+   global CHECK_OUTPUT ts_config have_host_aliases CHECK_USER
+   if { [is_remote_file $ts_config(master_host) $CHECK_USER $ts_config(product_root)/$ts_config(cell)/common/host_aliases] } {
+      start_remote_prog $ts_config(master_host) $CHECK_USER "mv" \
+         "$ts_config(product_root)/$ts_config(cell)/common/host_aliases $ts_config(product_root)/$ts_config(cell)/common/host_aliases.saved"
+      set have_host_aliases "true"
+   } else {
+      set have_host_aliases "false"
+   }
+   set_error 0 "ok"
+}
+
+proc host_aliases_test_cleanup  {} {
+   global CHECK_OUTPUT ts_config have_host_aliases CHECK_USER
+
+   if { $have_host_aliases == "true" } {
+      if { [is_remote_file $ts_config(master_host) $CHECK_USER $ts_config(product_root)/$ts_config(cell)/common/host_aliases.saved] } {
+         delete_remote_file $ts_config(master_host) $CHECK_USER $ts_config(product_root)/$ts_config(cell)/common/host_aliases
+         start_remote_prog $ts_config(master_host) $CHECK_USER "mv" \
+            "$ts_config(product_root)/$ts_config(cell)/common/host_aliases.saved $ts_config(product_root)/$ts_config(cell)/common/host_aliases"
+      }
+   } else {
+      delete_remote_file $ts_config(master_host) $CHECK_USER $ts_config(product_root)/$ts_config(cell)/common/host_aliases
+   }
+   set_error 0 "ok"
+}
+
+proc parse_gethostbyname_output { output {result host_name_array}} {
+   global CHECK_OUTPUT
+   upvar $result res_array
+
+   set lines [split $output "\n"]
+   foreach line $lines {
+      if {[string match "*Hostname*" $line]} {
+         set help [split $line ":"]
+         set hostname [lindex $help 1]
+         set res_array(hostname) [string trim $hostname]
+      }
+      if {[string match "*SGE name:*" $line]} {
+         set help [split $line ":"]
+         set hostname [lindex $help 1]
+         set res_array(sgename) [string trim $hostname]
+      }
+      if {[string match "*Aliases:*" $line]} {
+         set help [split $line ":"]
+         set hostname [lindex $help 1]
+         set res_array(aliases) [string trim $hostname]
+      }
+   }
+}
+
+proc host_aliases_test_test1 {} {
+   global host_aliases_test_test_hosts check_description CHECK_ARCH CHECK_USER
+   global CHECK_OUTPUT ts_config CHECK_CORE_MASTER CHECK_ACT_LEVEL CHECK_SCRIPT_FILE_DIR
+
+
+   puts $CHECK_OUTPUT $check_description($CHECK_ACT_LEVEL)
+
+   if { $CHECK_ACT_LEVEL == 0 } {
+      set output [start_sge_bin "gethostbyname" "-all $ts_config(master_host)" $ts_config(master_host) "" prg_exit_state 60 "" "utilbin"]
+      parse_gethostbyname_output $output
+      puts $CHECK_OUTPUT "hostname: \"$host_name_array(hostname)\""
+      puts $CHECK_OUTPUT "sgename:  \"$host_name_array(sgename)\""
+      puts $CHECK_OUTPUT "aliases:  \"$host_name_array(aliases)\""
+
+      set nr_aliases [llength $host_name_array(aliases)]
+      if { $nr_aliases == 0 } {
+         add_proc_error "host_aliases_test_test1" -3 "can't run test, host $ts_config(master_host) has no aliases"
+      } else {
+         if { $host_name_array(hostname) != $host_name_array(sgename) } {
+            add_proc_error "host_aliases_test_test1" -1 "there seems to be an host_aliases file, because hostname and sgename are not identical"
+         }
+         set last_alias $nr_aliases
+         incr last_alias -1
+         set aliased_name [lindex $host_name_array(aliases) $last_alias]
+ 
+         puts $CHECK_OUTPUT "expecting sge name: \"$aliased_name\""
+         puts $CHECK_OUTPUT "writing alias file $ts_config(product_root)/$ts_config(cell)/common/host_aliases ..."
+
+         # test the hostname case compare by using upper letters for the hostname
+         set name_to_alias [string toupper $host_name_array(hostname)]
+         if { $name_to_alias == $host_name_array(hostname) } {
+            set name_to_alias [string tolower $host_name_array(hostname)]
+         }
+         start_remote_prog $ts_config(master_host) $CHECK_USER "echo" "\"$aliased_name $name_to_alias\" > $ts_config(product_root)/$ts_config(cell)/common/host_aliases"
+         wait_for_remote_file $ts_config(master_host) $CHECK_USER $ts_config(product_root)/$ts_config(cell)/common/host_aliases
+         set file [start_remote_prog $ts_config(master_host) $CHECK_USER "cat" "$ts_config(product_root)/$ts_config(cell)/common/host_aliases"]
+         puts $CHECK_OUTPUT "cat host_aliases:\n$file"
+         # re-resolve the host
+         set output [start_sge_bin "gethostbyname" "-all $ts_config(master_host)" $ts_config(master_host) "" prg_exit_state 60 "" "utilbin"]
+         parse_gethostbyname_output $output result
+         puts $CHECK_OUTPUT "hostname: \"$result(hostname)\""
+         puts $CHECK_OUTPUT "sgename:  \"$result(sgename)\""
+         puts $CHECK_OUTPUT "aliases:  \"$result(aliases)\""
+         
+         if { $result(sgename) != $aliased_name } {
+            add_proc_error "host_aliases_test_test1" -1 "host aliasing not working!"
+         }
+      }
+   }
+
+   set_error 0 "ok"
+}
+
+
